5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1573_1330.log
== SUBMITION (2019-03-11 15:10:52) 
-- CODE:
print("41,66")
-- EXECUTION TIME:
0.186393
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41,66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:11:53) 
-- CODE:
print("round(41,66)")
-- OUTPUT:
round(41,66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:12:31) 
-- CODE:
print("")
round("41,66")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round("41,66")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:13:27) 
-- CODE:
print("(round (41,66))")

-- OUTPUT:
(round (41,66))
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:13:42) 
-- CODE:
round("41,66")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("41,66")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:14:13) 
-- CODE:
print("round("41,66,2"))

-- ERROR:
File "XXXX", line 1
    print("round("41,66,2"))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:16:08) 
-- CODE:
print("round(41,662)")
-- OUTPUT:
round(41,662)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:16:15) 
-- CODE:
print("round(41,66)")
-- EXECUTION TIME:
0.146596
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:16:35) 
-- CODE:
print("round($41,66)")
-- OUTPUT:
round($41,66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:16:43) 
-- CODE:
print("($41,66)")
-- OUTPUT:
($41,66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:16:52) 
-- CODE:
print("$41,66")
-- EXECUTION TIME:
0.127685
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
$41,66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:23) 
-- CODE:
round("41,66")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("41,66")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:34) 
-- CODE:
round(41,66)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("41,66")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:06) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:42) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.115886
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:56) 
-- CODE:
print(round(42))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:44) 
-- CODE:
print(round(41.6,2))
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:47) 
-- CODE:
print(round(41.6,2))
-- EXECUTION TIME:
0.130459
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:50) 
-- CODE:
print(round(41.6,2))
-- EXECUTION TIME:
0.113133
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:53) 
-- CODE:
print(round(41.6,2))
-- EXECUTION TIME:
0.114011
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:17) 
-- CODE:
print (round(41.6,2))
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:19) 
-- CODE:
print (round(41.6,2))
-- EXECUTION TIME:
0.150256
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:41) 
-- CODE:
print (round(41.6 ,2))
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:43) 
-- CODE:
print (round(41.6 ,2))
-- EXECUTION TIME:
0.136232
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:48) 
-- CODE:
print(round(41.6 ,2))
-- EXECUTION TIME:
0.148704
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:58) 
-- CODE:
print(round(41.6, 2))
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:00) 
-- CODE:
print(round(41.6, 2))
-- EXECUTION TIME:
0.116406
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:05) 
-- CODE:
print(round(41.6,  2))
-- EXECUTION TIME:
0.124691
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:16) 
-- CODE:
print(round(41.6, 2))
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:18) 
-- CODE:
print(round(41.6, 2))
-- EXECUTION TIME:
0.138196
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:43) 
-- CODE:
print (round(41.6, 2))
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:45) 
-- CODE:
print (round(41.6, 2))
-- EXECUTION TIME:
0.152758
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:50) 
-- CODE:
print (round(41.6,  2))
-- EXECUTION TIME:
0.139498
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:29) 
-- CODE:
print(round(41.67, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:31) 
-- CODE:
print(round(41.67, 2))
-- EXECUTION TIME:
0.241756
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
